Fixed The Table Length
Table is too small

--- a/css/typography.css
+++ b/css/typography.css
@@ -115,6 +115,7 @@ td {
 	background-color: #CD97FF;
 	color: #000;
 	font-weight: 300;
+	padding: 0 5rem;
 }
 	
 blockquote p {
